GPC/tests/examples/fail/methodNoObject.gpc


int GPRM::Test::methodNoObject() {
    
    int x = 5;
    x.m1();
    return 0;

}
